- fix issue where modal doesnt scroll and gets stuck when editing pws action boxes - add description with the url where error takes place (error logger)

--- a/public/rcm-page-admin-panel/panel.css
+++ b/public/rcm-page-admin-panel/panel.css
@@ -65,7 +65,7 @@
 }
 
 .modal-body {
-    max-height: 90%;
+    max-height: calc(100vh - 210px);
     overflow-y: auto;
 }
 
